[project]
name = "eassy-hleg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "addict>=2.4.0",
    "httpx>=0.28.1",
    "numpy>=2.4.0",
    "pillow>=12.0.0",
    "ptflops>=0.7.5",
    "randaugment>=1.0.2",
    "scikit-learn>=1.8.0",
    "tensorboard>=2.20.0",
    "termcolor>=3.2.0",
    "thop>=0.1.1.post2209072238",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "yapf>=0.43.0",
]
